changed logo to svg

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <span class="navbar-toggle" id="js-navbar-toggle">
             <i class="fa fa-bars"></i>
           </span>
-          <div class="brand"><img src="./logo/logo.png" height="48" /></div>
+          <div class="brand"><img src="./logo/logo.svg" height="48" /></div>
           <ul class="main-nav" id="js-menu">
             <li><a href="./index.html">Home</a></li>
             <li><a href="#section4">Team</a></li>
