correct footer href to match nav href for "Team"

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <p class="footer-links">
           <a href="#home">Home</a>
           |
-          <a href="./team.html">Team</a>
+          <a href="#section4">Team</a>
           |
           <a href="#aboutus">About</a>
           |
