--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="#section4">Team</a></li>
             <li><a href="#section6">Mentors</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="./project.html">Projects</a></li>
             <li><a href="#aboutus">About</a></li>
             <li><a href="#contactus">Contact</a></li>
           </ul>
@@ -244,7 +244,10 @@
               <a href="mailto:kundanbhasin11062000@gmail.com"
                 >Kundan Bhasin |</a
               >
-              <a href="mailto:manish15052000@gmail.com">Manish Kumar</a>
+              <a href="mailto:manish15052000@gmail.com">Manish Kumar |</a>
+              <a href="mailto:shivamagrahari5999@gmail.com"
+              >Shivam Agrahari</a
+            >
             </p>
             <!--Add You MailID after mailto:-->
           </div>
